--- a/package.json
+++ b/package.json
@@ -11,15 +11,15 @@
   "main": "index.js",
   "scripts": {
     "test": "jest --watch",
-    "test-coverage" : "jest --coverage",
+    "test-coverage": "jest --coverage",
     "start": "nodemon app.js"
-
   },
   "author": "carlos cienfuegos",
   "license": "ISC",
   "devDependencies": {
     "chance": "^1.1.11",
     "jest": "^29.5.0",
-    "nodemon": "^2.0.22"
+    "nodemon": "^2.0.22",
+    "supertest": "^6.3.3"
   }
 }
